--- a/parquimetro.html
+++ b/parquimetro.html
@@ -15,11 +15,11 @@
     <main>
         <div id="conteiner">
             <h2>Tempo disponivel</h2>
-            <textarea id="tela"></textarea>
+            <textarea id="tela">Tempo Disponivel</textarea>
             <h2>Tabela de preços: </h2>
             <img src="tabela de preço.png" alt="Tabela de preços">
             <br><input type="text" id="valor" placeholder="Insira valor desejado:">
-            <br><button id="pagar()">Pagar</button>
+            <button type="button" onclick="sistema.calcular()">Pagar</button>
         </div>
     </main>
     <footer class="footer">
