--- a/parquimetro.html
+++ b/parquimetro.html
@@ -13,7 +13,7 @@
         <h1>Parquimetro</h1>
     </header>
     <main>
-        <div id="conteiner">
+        <div>
             <h2>Tempo disponivel</h2>
             <textarea id="tela">Tempo Disponivel</textarea>
             <h2>Tabela de preços: </h2>
